Fix spacings on home.sass

--- a/public/assets/stylesheets/sass/global/components/_recipe-block.sass
+++ b/public/assets/stylesheets/sass/global/components/_recipe-block.sass
@@ -72,7 +72,6 @@
   +clearfix()
   +border-bottom-radius($border-radius-base)
   padding: 12px
-  margin-bottom: 90px
   background: #fff
   box-shadow: 0 2px 2px rgba(11, 25, 28, 0.1)
   border: 1px solid #e4e4e4
